  - Added EXPERIMENTAL warmup method to Mojolicious.
  - Added EXPERIMENTAL load_classes function to Mojo::Loader.
  - Removed experimental status from humanize_bytes method in Mojo::ByteStream.
  - Removed experimental status from humanize_bytes function in Mojo::Util.
  - Improved find_modules function in Mojo::Loader with recursive option.
  - Fixed a bug in Mojolicious::Commands where help messages would not be displayed correctly for some commands.
    (kiwiroy)
  - Fixed a bug in Mojolicious::Routes::Pattern where type_start was treated as a regex. (Grinnz)

8.65  2020-11-10
  - Added generate dockerfile command. (tianon)
  - Improved cookbook with container deployment recipe.
  - Improved security of secure_compare function in Mojo::Util. (robrwo)
  - Fixed all generated code to consistently use a *::Sandbox class, instead of *::SandBox.

8.64  2020-11-01
  - Replaced prettify.js with highlight.js. (zakame)
  - Fixed a bug in Mojo::DOM where the tree root would be checked for all pseudo-classes.
  - Fixed a redefined subroutine warning in eval command. (elmar)

8.63  2020-10-11
  - Improved Mojo::IOLoop::Subprocess to ensure a clean exit even if something unexpected happens in the forked
    process.

8.62  2020-10-10
  - Improved commands to exit with a usage message on unknown options.

8.61  2020-10-01
  - Fixed fork-safety feature in Mojo::UserAgent to work with more than one fork.
  - Fixed reset method in Mojo::IOLoop to not interfere with close events anymore, since that resulted in leaks.

8.60  2020-09-27
  - Improved reset method in Mojo::IOLoop to prevent close event to be emitted in affected streams. (kiwiroy)
  - Improved cookbook with Envoy deployment recipe. (zakame)

8.59  2020-09-05
  - Added l function to ojo. (kiwiroy)
  - Added MOJO_PROMISE_DEBUG environment variable to Mojo::Promise.

8.58  2020-08-05
  - Improved app and lite_app generators to use templates with subroutine signatures.